devtools/laymos/test/fixtures/story-ejection/invalid/direct-step-effect.ts
import { Effect } from 'effect';
import { step } from 'laymos/story';

export const result = step('Work', {}, Effect.void);
